  field=value that specify the changes you want to make.
* A new "beet update" command updates the database to reflect
  changes in the on-disk metadata. You can now use an external
  program to edit tags on files, remove files and directories, etc.,
  and then run "beet update" to make sure your beets library is in
  sync. This will also rename files to reflect their new metadata.
* When importing files that are already in the library database,
  the items are no longer duplicated -- instead, the library is
  updated to reflect the new metadata. This way, the import command
  can be transparently used as a "re-import".
* Relatedly, the -L flag to the "import" command makes it take a query
  as its argument instead of a list of directories. The matched albums
  (or items, depending on the -s flag) are then re-imported.
* When pruning directories, "clutter" files such as .DS_Store and
  Thumbs.db are ignored (and removed with otherwise-empty
  directories).
* Handle exceptions thrown when running Mutagen.
* Fix a missing __future__ import in embedart on Python 2.5.
* Fix ID3 and MPEG-4 tag names for the album-artist field.
* Fix Unicode encoding of album artist, album type, and label.

1.0b9
-----
* Queries can now contain whitespace. Spaces passed as shell
  arguments are now preserved, so you can use your shell's escaping
  syntax to include spaces in queries. For example, typing this:
    beet ls "the knife"
  or this:
    beet ls the\ knife
  now matches the entire phrase. To match in specified fields, use
  a construction like this:
    beet ls "artist:the knife"
* Queries can match items from the library by directory. A 'path:'
  prefix is optional; any query containing a path separator (/ on
  POSIX systems) is assumed to be a path query. Running
  "beet ls path/to/music" will show all the music in your library
  under the specified directory.
* Album art is now automatically discovered and copied from the
  imported directories when available.